--- a/chunk_VDB.ipynb
+++ b/chunk_VDB.ipynb
@@ -13,28 +13,67 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 1,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "7dtgLxkQBVU4",
-        "outputId": "3f8c01bd-e43c-4b87-c5d9-032d3c7ecf01"
+        "outputId": "ca8199cc-9656-44a8-c445-bdeb84143f85"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Collecting purecpp_extract_dev==0.0.400\n",
+            "  Downloading purecpp_extract_dev-0.0.400-cp311-none-manylinux_2_34_x86_64.whl.metadata (562 bytes)\n",
+            "Collecting purecpp_chunks_clean_dev==0.0.400\n",
+            "  Downloading purecpp_chunks_clean_dev-0.0.400-cp311-none-any.whl.metadata (709 bytes)\n",
+            "Collecting purecpp_libs_dev (from purecpp_extract_dev==0.0.400)\n",
+            "  Downloading purecpp_libs_dev-0.0.400-cp311-none-manylinux_2_34_x86_64.whl.metadata (448 bytes)\n",
+            "Collecting auditwheel (from purecpp_chunks_clean_dev==0.0.400)\n",
+            "  Downloading auditwheel-6.4.1-py3-none-any.whl.metadata (7.3 kB)\n",
+            "Requirement already satisfied: build in /usr/local/lib/python3.11/dist-packages (from purecpp_chunks_clean_dev==0.0.400) (1.2.2.post1)\n",
+            "Requirement already satisfied: requests in /usr/local/lib/python3.11/dist-packages (from purecpp_chunks_clean_dev==0.0.400) (2.32.3)\n",
+            "Requirement already satisfied: wheel in /usr/local/lib/python3.11/dist-packages (from purecpp_chunks_clean_dev==0.0.400) (0.45.1)\n",
+            "Collecting pybind11 (from purecpp_chunks_clean_dev==0.0.400)\n",
+            "  Downloading pybind11-3.0.0-py3-none-any.whl.metadata (10.0 kB)\n",
+            "Requirement already satisfied: setuptools in /usr/local/lib/python3.11/dist-packages (from purecpp_chunks_clean_dev==0.0.400) (75.2.0)\n",
+            "Requirement already satisfied: packaging>=20.9 in /usr/local/lib/python3.11/dist-packages (from auditwheel->purecpp_chunks_clean_dev==0.0.400) (25.0)\n",
+            "Collecting pyelftools>=0.24 (from auditwheel->purecpp_chunks_clean_dev==0.0.400)\n",
+            "  Downloading pyelftools-0.32-py3-none-any.whl.metadata (372 bytes)\n",
+            "Requirement already satisfied: pyproject_hooks in /usr/local/lib/python3.11/dist-packages (from build->purecpp_chunks_clean_dev==0.0.400) (1.2.0)\n",
+            "Requirement already satisfied: charset-normalizer<4,>=2 in /usr/local/lib/python3.11/dist-packages (from requests->purecpp_chunks_clean_dev==0.0.400) (3.4.2)\n",
+            "Requirement already satisfied: idna<4,>=2.5 in /usr/local/lib/python3.11/dist-packages (from requests->purecpp_chunks_clean_dev==0.0.400) (3.10)\n",
+            "Requirement already satisfied: urllib3<3,>=1.21.1 in /usr/local/lib/python3.11/dist-packages (from requests->purecpp_chunks_clean_dev==0.0.400) (2.4.0)\n",
+            "Requirement already satisfied: certifi>=2017.4.17 in /usr/local/lib/python3.11/dist-packages (from requests->purecpp_chunks_clean_dev==0.0.400) (2025.7.14)\n",
+            "Downloading purecpp_extract_dev-0.0.400-cp311-none-manylinux_2_34_x86_64.whl (8.1 MB)\n",
+            "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m8.1/8.1 MB\u001b[0m \u001b[31m29.3 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+            "\u001b[?25hDownloading purecpp_chunks_clean_dev-0.0.400-cp311-none-any.whl (15.3 MB)\n",
+            "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m15.3/15.3 MB\u001b[0m \u001b[31m70.2 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+            "\u001b[?25hDownloading auditwheel-6.4.1-py3-none-any.whl (50 kB)\n",
+            "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m50.8/50.8 kB\u001b[0m \u001b[31m3.3 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+            "\u001b[?25hDownloading purecpp_libs_dev-0.0.400-cp311-none-manylinux_2_34_x86_64.whl (925 kB)\n",
+            "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m926.0/926.0 kB\u001b[0m \u001b[31m43.3 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+            "\u001b[?25hDownloading pybind11-3.0.0-py3-none-any.whl (292 kB)\n",
+            "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m292.1/292.1 kB\u001b[0m \u001b[31m19.4 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+            "\u001b[?25hDownloading pyelftools-0.32-py3-none-any.whl (188 kB)\n",
+            "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m188.5/188.5 kB\u001b[0m \u001b[31m13.1 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+            "\u001b[?25hInstalling collected packages: pyelftools, purecpp_libs_dev, pybind11, purecpp_extract_dev, auditwheel, purecpp_chunks_clean_dev\n",
+            "Successfully installed auditwheel-6.4.1 purecpp_chunks_clean_dev-0.0.400 purecpp_extract_dev-0.0.400 purecpp_libs_dev-0.0.400 pybind11-3.0.0 pyelftools-0.32\n"
+          ]
+        }
+      ],
       "source": [
-        "#!pip install purecpp_extract_dev==0.0.400 purecpp_chunks_clean_dev==0.0.400"
+        "!pip install purecpp_extract_dev==0.0.400 purecpp_chunks_clean_dev==0.0.400"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 2,
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "Id24_ARrT_KY",
-        "outputId": "aa82d813-2eb6-4260-f680-cb82953b626a"
+        "id": "Id24_ARrT_KY"
       },
       "outputs": [],
       "source": [
@@ -44,11 +83,26 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": 3,
       "metadata": {
-        "id": "TAd_tzUZBVU5"
+        "id": "TAd_tzUZBVU5",
+        "outputId": "ffb69321-cd5e-4586-e414-6e1110445ec6",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Not all files are present. Downloading libtorch...\n",
+            "Libtorch downloaded and extracted successfully.\n",
+            "Conteúdo de d_libs/: libtorch\n",
+            "\n"
+          ]
+        }
+      ],
       "source": [
         "import purecpp_libs_dev as libs\n",
         "from purecpp_extract_dev import WebLoader\n",
@@ -57,9 +111,10 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 5,
+      "execution_count": null,
       "metadata": {
-        "id": "UZD-yrgDBVU5"
+        "id": "UZD-yrgDBVU5",
+        "outputId": "7f74fba5-29de-4b36-f4f1-eacbc9ec1cf9"
       },
       "outputs": [
         {
@@ -77,8 +132,11 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 6,
-      "metadata": {},
+      "execution_count": null,
+      "metadata": {
+        "id": "Ai0NmcBHuIWZ",
+        "outputId": "f70e69ea-4a35-4678-dcfa-b2003891fe2d"
+      },
       "outputs": [
         {
           "name": "stdout",
@@ -110,7 +168,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 7,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -137,7 +195,9 @@
     },
     {
       "cell_type": "markdown",
-      "metadata": {},
+      "metadata": {
+        "id": "qOg_ER9DuIWZ"
+      },
       "source": [
         "# Embedding Results by Model\n",
         "\n",
@@ -175,8 +235,11 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 8,
-      "metadata": {},
+      "execution_count": null,
+      "metadata": {
+        "id": "w1zk60ccuIWa",
+        "outputId": "867cf7ee-63d8-443e-ef64-1c8596190644"
+      },
       "outputs": [
         {
           "name": "stdout",
@@ -220,8 +283,11 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 9,
-      "metadata": {},
+      "execution_count": null,
+      "metadata": {
+        "id": "I96Lr8yjuIWa",
+        "outputId": "67823c66-3359-41e2-8cfb-3adf8c2a2b34"
+      },
       "outputs": [
         {
           "name": "stdout",
@@ -265,8 +331,11 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 10,
-      "metadata": {},
+      "execution_count": null,
+      "metadata": {
+        "id": "wNZANzSXuIWb",
+        "outputId": "90831ca7-761e-4a81-cc8a-5cfe5eb7cb19"
+      },
       "outputs": [
         {
           "name": "stdout",
@@ -304,7 +373,9 @@
     },
     {
       "cell_type": "markdown",
-      "metadata": {},
+      "metadata": {
+        "id": "i8wnA55TuIWb"
+      },
       "source": [
         "## Internal Structure of `ChunkDefault` and `VectorDatabase`\n",
         "\n",
@@ -330,8 +401,11 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 11,
-      "metadata": {},
+      "execution_count": null,
+      "metadata": {
+        "id": "XMaPvtMDuIWb",
+        "outputId": "839009cc-0389-4fdb-8aa6-2f8cbe5f89f3"
+      },
       "outputs": [
         {
           "name": "stdout",
@@ -363,7 +437,9 @@
     },
     {
       "cell_type": "markdown",
-      "metadata": {},
+      "metadata": {
+        "id": "LRJYv3couIWb"
+      },
       "source": [
         "# How `VectorDataBase` and `ChunkQuery` Work Together\n",
         "\n",
@@ -442,8 +518,11 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 12,
-      "metadata": {},
+      "execution_count": null,
+      "metadata": {
+        "id": "rPtKaM09uIWc",
+        "outputId": "6e935e09-98d1-4a2d-b371-a75452607e6c"
+      },
       "outputs": [
         {
           "data": {
@@ -476,8 +555,11 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 13,
-      "metadata": {},
+      "execution_count": null,
+      "metadata": {
+        "id": "hxglTHaYuIWc",
+        "outputId": "447e2884-ec6d-47b7-e6ed-8fcc3114d650"
+      },
       "outputs": [
         {
           "data": {
@@ -512,8 +594,11 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 14,
-      "metadata": {},
+      "execution_count": null,
+      "metadata": {
+        "id": "R0EwSKJ9uIWc",
+        "outputId": "2f7e0db4-8db7-45f2-9cd7-96b57373b15d"
+      },
       "outputs": [
         {
           "data": {
@@ -548,8 +633,11 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 15,
-      "metadata": {},
+      "execution_count": null,
+      "metadata": {
+        "id": "F3iTwpcUuIWc",
+        "outputId": "d3c1fd45-414b-4dc5-ae5f-b1891a42832c"
+      },
       "outputs": [
         {
           "data": {
@@ -576,8 +664,10 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 16,
-      "metadata": {},
+      "execution_count": null,
+      "metadata": {
+        "id": "udYnZuY9uIWc"
+      },
       "outputs": [],
       "source": [
         "result = cc.PureL2(\"Playoff\", chunk_default, 2, 6)"
@@ -586,7 +676,9 @@
     {
       "cell_type": "code",
       "execution_count": null,
-      "metadata": {},
+      "metadata": {
+        "id": "9u4D8PlUuIWc"
+      },
       "outputs": [],
       "source": [
         "\n"
